Zoom Fixes and Redirects

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Generally a bad idea to disable user scaling however interfaces should not be scrollable (as per tiktok native) -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Reddit TikTok Clone" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
